--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "fullstack-wordle",
   "version": "1.0.0",
-  "description": "Made with React, Vite, Material UI, Node.js, Express.js and PUG",
+  "description": "Made with React, Vite, Material UI, Node.js, Express.js and EJS",
   "main": "index.js",
   "scripts": {
     "install": "cd client && npm install && cd ../server && npm install",
-    "start": "cd server && npm start",
+    "client": "cd client && npm run dev",
+    "server": "cd server && npm start",
+    "build": "cd client && npm run build",
+    "start": "npm run build && cd server && npm start",
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
