--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: frankfurt
     plan: free
     buildCommand: npm install
-    startCommand: node backend/server.js
+    startCommand: cd server && npm start
     envVars:
       - key: MONGODB_URI
         sync: false
